# conan_cmake_rust_integration

./: .gitignore  CMakeLists.txt  Readme.md  conanfile.py
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app-rs/: Cargo.toml  styles.css
src/app-rs/src/: app.rs
src/app-rs/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src/app-rs/src-tauri/src/: ext.rs  main.rs
src/app/src/: main.cpp
src/deep_thought/: CMakeLists.txt
src/deep_thought/include/deep_thought/: answer.hpp
src/deep_thought/src/: answer.cpp
