[package]
name = "app-rs"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
dircpy = "0.3.15"
tauri-build = { version = "1.5", features = [] }
autocxx-build = { version = "0.26.0" }
conan = "0.4.2"
cxx-build = { version = "1.0.110", features = ["experimental-async-fn", "parallel"] }
miette = "5.10.0"

[dependencies]
autocxx = "0.26.0"
cxx = { version = "1.0.110", features = ["c++14", "c++17", "c++20"] }
tauri = { version = "1.5", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12.4"
clap = { version= "4.4.8", features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
